--- a/config.cfg
+++ b/config.cfg
@@ -2,16 +2,16 @@
 Teachers = personnels.csv
 Courses = modules.csv
 Groups = groupes.csv
-ComputerScience_teachers = Liste_Permanents_2019-2020.csv
+ComputerScience_teachers = Liste_Permanents_2020-2021.csv
 
 [Dir Names]
 Cache_dir = ./tmp/
 
 [Web]
-Celcat_url = https://edt.univ-nantes.fr/sciences/
+Celcat_url = https://edt.univ-nantes.fr/sciences-bis/
 host=0.0.0.0
 port=32769
 
 [Autre]
-debug=False
+debug=True
 duree=7
