--- a/config.cfg
+++ b/config.cfg
@@ -8,7 +8,7 @@ ComputerScience_teachers = Liste_Permanents_2020-2021.csv
 Cache_dir = ./tmp/
 
 [Web]
-Celcat_url = https://edt.univ-nantes.fr/sciences-bis/
+Celcat_url = https://edt.univ-nantes.fr/sciences/
 host=0.0.0.0
 port=32769
 
